@@ -1,3 +1,4 @@
+    - fixed problem with newline at the end of included templates (Monte, Andrei)
     - added feature to regenerate cache if compile_check is enabled and an
       involved template or config file gets modified (Monte)
     - added DEBUG execution times to included files (Monte)
